package com.gdavidpb.tuindice.pensum.ui

import com.gdavidpb.tuindice.pensum.presentation.model.PensumNodeStatusType

object PensumUiTags {
	const val PensumScreen = "pensum_screen"
	const val Loading = "pensum_loading"
	const val LoadingTitle = "pensum_loading_title"
	const val LoadingMessage = "pensum_loading_message"
	const val LoadingAnimation = "pensum_loading_animation"
	const val PensumSummaryContainer = "pensum_summary_container"
	const val PensumContextSummary = "pensum_context_summary"
...
