appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- runFlow: login-summary-ready.yaml
- tapOn:
    id: maincore_tuindice_bottom_bar_evaluations_item
- extendedWaitUntil:
    visible:
      id: evaluations_content_container
    timeout: 20000
- runFlow: ../_shared/dismiss-coachmarks-if-visible.yaml
- tapOn:
    id: evaluations_add_fab
- extendedWaitUntil:
    visible:
      id: evaluation_content_container
    timeout: 20000
- tapOn:
    id: evaluation_subject_chip_e21f0d7e481d13d19f328d6818ce4d77
- tapOn:
    id: evaluation_type_chip_test
- tapOn:
    id: evaluation_max_grade_chip
- extendedWaitUntil:
    visible:
      id: evaluation_dialog_title
    timeout: 10000
- tapOn:
    id: evaluation_dialog_confirm_button
- tapOn:
    id: evaluation_done_fab
- extendedWaitUntil:
    visible:
      id: evaluations_content_container
    timeout: 10000
- tapOn:
    id: maincore_tuindice_bottom_bar_summary_item
- extendedWaitUntil:
    visible:
      id: summary_content_container
    timeout: 20000
- tapOn:
    id: base_top_app_bar_action_sign_out
- extendedWaitUntil:
    visible:
      id: auth_sign_out_message_text
    timeout: 10000
- tapOn:
    id: base_confirmation_dialog_positive_button
- extendedWaitUntil:
    visible:
      id: auth_sign_out_secondary_button
    timeout: 30000
- tapOn:
    id: auth_sign_out_secondary_button
- extendedWaitUntil:
    visible:
      id: auth_usb_id_text_field
    timeout: 30000
