appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- runFlow: ../auth/login-success.yaml
- runFlow: ../_shared/continue-to-summary-after-auth.yaml
- tapOn:
    id: maincore_tuindice_bottom_bar_evaluations_item
- extendedWaitUntil:
    visible:
      id: evaluations_content_container
    timeout: 30000
- runFlow: ../_shared/dismiss-coachmarks-if-visible.yaml
- tapOn:
    id: evaluations_add_fab
- extendedWaitUntil:
    visible:
      id: evaluation_content_container
    timeout: 20000
- runFlow: ../_shared/dismiss-coachmarks-if-visible.yaml
- tapOn:
    id: evaluation_subject_chip_e21f0d7e481d13d19f328d6818ce4d77
- tapOn:
    id: evaluation_type_chip_test
- tapOn:
    id: evaluation_date_select_button
- extendedWaitUntil:
    visible:
      id: evaluation_calendar_container
    timeout: 10000
- tapOn:
    id: evaluation_calendar_previous_month_button
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    id: evaluation_calendar_day_cell_15
- tapOn:
    id: evaluation_date_dialog_accept_button
- assertNotVisible:
    id: evaluation_grade_chip
- tapOn:
    id: evaluation_max_grade_chip
- extendedWaitUntil:
    visible:
      id: evaluation_dialog_title
    timeout: 10000
- assertVisible:
    id: evaluation_dialog_subtitle
- assertVisible:
    id: evaluation_dialog_subject_code_chip
- assertVisible:
    id: evaluation_grade_wheel_picker
- tapOn:
    id: evaluation_dialog_confirm_button
- extendedWaitUntil:
    visible:
      id: evaluation_grade_chip
    timeout: 10000
- tapOn:
    id: evaluation_grade_chip
- extendedWaitUntil:
    visible:
      id: evaluation_dialog_title
    timeout: 10000
- assertVisible:
    id: evaluation_dialog_subtitle
- assertVisible:
    id: evaluation_dialog_subject_code_chip
- tapOn:
    id: evaluation_dialog_confirm_button
- tapOn:
    id: evaluation_done_fab
- extendedWaitUntil:
    visible:
      id: evaluations_content_container
    timeout: 20000
- extendedWaitUntil:
    visible:
      id: base_snackbar_container
    timeout: 15000
