appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- runFlow: ../auth/login-success.yaml
- runFlow: ../_shared/continue-to-summary-after-auth.yaml
- tapOn:
    id: maincore_tuindice_bottom_bar_evaluations_item
- extendedWaitUntil:
    visible:
      id: evaluations_content_container
    timeout: 30000
- runFlow: ../_shared/dismiss-coachmarks-if-visible.yaml
- scrollUntilVisible:
    element:
      id: evaluation_item_card_741ee22ed3a76b1bbd7deb77e9490435
    direction: DOWN
    visibilityPercentage: 50
    centerElement: true
    timeout: 15000
- assertVisible:
    id: evaluation_item_card_741ee22ed3a76b1bbd7deb77e9490435
- tapOn:
    id: evaluation_item_card_741ee22ed3a76b1bbd7deb77e9490435
- extendedWaitUntil:
    visible:
      id: evaluation_swipe_delete_action
    timeout: 10000
- assertVisible:
    id: evaluation_swipe_to_dismiss_container
- tapOn:
    id: evaluation_swipe_delete_action
- extendedWaitUntil:
    visible:
      id: evaluation_delete_confirmation_message
    timeout: 10000
- tapOn:
    id: base_confirmation_dialog_positive_button
- extendedWaitUntil:
    visible:
      id: base_snackbar_container
    timeout: 15000
- assertVisible:
    id: evaluations_content_container
